<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blacklight"
    >
    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                style="@style/detailLabel"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/typemovie"
                android:textAlignment="viewStart" />

            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#727272" />


            <TextView
                android:id="@+id/first"
                style="@style/detailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:src="@drawable/ic_pages_black_24dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                style="@style/detailLabel"
                android:layout_width="84dp"

                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/releasdate"
                android:textAlignment="viewStart" />

            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#727272" />

            <TextView
                android:id="@+id/dateFrag"
                style="@style/detailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:src="@drawable/ic_date_range_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                style="@style/detailLabel"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/popularitymovie"
                android:textAlignment="viewStart" />

            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#727272" />

            <TextView
                android:id="@+id/popFrag"
                style="@style/detailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:src="@drawable/ic_people_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                style="@style/detailLabel"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/avaragevote"
                android:textAlignment="viewStart" />

            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#727272" />


            <TextView
                android:id="@+id/voteFrag"
                style="@style/detailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingRight="4dp"
                android:src="@drawable/ic_trending_up_black_24dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>